--- a/html,css/index.html
+++ b/html,css/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="../js/script.js"></script> -->
     <title>ToDo</title>
 </head>
 <header>
@@ -16,41 +17,40 @@
 <body>
 <div class="container">
 <div class="Insert_Element">
-    <form>
+    <form id="TodoForm">
+    <h2 class="Todos">ToDo's</h2>
 
-    <h2>ToDo's</h2>
+    <label for="title" class="FormLabel">Title</label> <br>
+    <input type="text" name="title" id="title" placeholder="Titel" required minlength="1" maxlength="30"> <br> <br>
 
-    <label for="title">Title</label> <br>
-    <input type="text" name="title" id="title" placeholder="Titel" required minlength="1" maxlength="30"> <br>
+    <label for="Beschreibung" class="FormLabel">Beschreibung</label> <br>
+    <textarea name="beschreibung" id="Beschreibung" minlength="1" maxlength="255" required placeholder="Beschreibung" ></textarea> <br> <br>
 
-    <label for="Beschreibung">Beschreibung</label> <br>
-    <textarea name="Beschreibung" id="Beschreibung" minlength="1" maxlength="255" required placeholder="Beschreibung" ></textarea> <br>
+    <label for="autor" class="FormLabel">Author</label> <br>
+    <input type="text" name="autor" id="autor" placeholder="Author" minlength="1" maxlength="20"> <br> <br>
 
-    <label for="autor">Author</label> <br>
-    <input type="text" name="autor" id="autor" placeholder="Author" minlength="1" maxlength="20"> <br>
-
-    <label for="kategorie">Kategorie</label> <br>
+    <label for="kategorie" class="FormLabel">Kategorie</label> <br>
     <select name="kategorie" id="kategorie" required>
         <option value=""></option>
         <option value="schule">Schule</option>
         <option value="geschaftlich">Geschätlich</option>
         <option value="freizeit">Freizeit</option>
         <option value="zuhause">Zuhause</option>
-    </select> <br>
+    </select> <br> <br>
 
-    <label for="wichtig">Wichtig?</label>
-    <input type="checkbox" name="wichtig" id="wichtig"> <br>
+    <label for="wichtig" class="FormLabel">Wichtig?</label>
+    <input type="checkbox" name="wichtig" id="wichtig"> <br> <br>
 
-    <label for="dringend">Dringen?</label>
-    <input type="checkbox" name="dringend" id="dringend"> <br>
+    <label for="dringend" class="FormLabel">Dringen?</label>
+    <input type="checkbox" name="dringend" id="dringend"> <br> <br>
 
-        <label for="start">Startdatum</label> <br>
-        <input type="date" name="start" id="start" required><br>
+        <label for="start" class="FormLabel">Startdatum</label> <br>
+        <input type="date" name="start" id="start" required><br> <br>
 
-        <label for="end">Enddatum</label> <br>
+        <label for="end" class="FormLabel">Enddatum</label> <br>
         <input type="date" name="end" id="end" required><br> <br>
 
-        <input type="submit" value="Insert">
+        <input type="submit"  value="Insert">
     </form>
 </div>
 <div class="ToDo_List">
