--- a/html,css/index.html
+++ b/html,css/index.html
@@ -51,6 +51,7 @@
 
             <input type="submit"  value="Delete">
             <input type="submit"  value="Update">
+            <input type="submit"  value="Show Insert">
         </form>
     </div>
 <div class="Insert_Element">
