--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+    <meta http-equiv="refresh" content="0; url=https://M294_JavaScript_Projekt.github.io/html,css/index.html">
     <title>dummysite</title>
 </head>
 </html>
